@@ -13,6 +13,8 @@ nn-nn-12 - Version 5.1.22
 
   - Fix for Bug#65508, getCharsetNameForIndex() should be faster.
 
+  - Fix for Bug#14563127, Load-balanced connection fails to select valid host, closes connection
+    on re-balance.
 
 07-05-12 - Version 5.1.21
   - Added new built-in authentication plugin com.mysql.jdbc.authentication.Sha256PasswordPlugin
